alting og ingenting

--- a/kontakt.html
+++ b/kontakt.html
@@ -82,7 +82,90 @@
     </header>
 
 
-    <main class="contact_content">
+    <main class="">
+
+        <section class="contact_content u-margin-bottom"></section>
+
+        <section class="instagram-slider u-margin-contact ">
+            <div class="container-webshop">
+                <h2 class="instagram-slider__title container">Følg med på Instagram</h2>
+            </div>
+            <ul class="instagram-list">
+
+                <li class="instagram-list__item">
+                    <a href="https://www.instagram.com/p/CIQwz2uBpu5/" class="instagram-list__link" target="_blank">
+                        <div class="instagram-list__icon-container">
+                            <img src="img/instagram1.png" alt="" class="instagram-list__icon">
+                        </div>
+                    </a>
+                </li>
+                <li class="instagram-list__item">
+                    <a href="https://www.instagram.com/p/CIINxaehhOw/" class="instagram-list__link" target="_blank">
+                        <div class="instagram-list__icon-container">
+                            <img src="img/instagram2.png" alt="" class="instagram-list__icon">
+                        </div>
+                    </a>
+                </li>
+                <li class="instagram-list__item">
+                    <a href="https://www.instagram.com/p/CIXfCoKBptB/" class="instagram-list__link" target="_blank">
+                        <div class="instagram-list__icon-container">
+                            <img src="img/instagram3.png" alt="" class="instagram-list__icon">
+                        </div>
+                    </a>
+                </li>
+                <li class="instagram-list__item">
+                    <a href="https://www.instagram.com/p/CH8UU7HhPgC/" class="instagram-list__link" target="_blank">
+                        <div class="instagram-list__icon-container">
+                            <img src="img/instagram4.png" alt="" class="instagram-list__icon">
+                        </div>
+                    </a>
+                </li>
+                <li class="instagram-list__item">
+                    <a href="https://www.instagram.com/p/CHkoi4dBSSB/" class="instagram-list__link" target="_blank">
+                        <div class="instagram-list__icon-container">
+                            <img src="img/instagram5.png" alt="" class="instagram-list__icon">
+                        </div>
+                    </a>
+                </li>
+                <li class="instagram-list__item">
+                    <a href="https://www.instagram.com/p/CGhtK-1hOwC/" class="instagram-list__link" target="_blank">
+                        <div class="instagram-list__icon-container">
+                            <img src="img/instagram6.png" alt="" class="instagram-list__icon">
+                        </div>
+                    </a>
+                </li>
+                <li class="instagram-list__item">
+                    <a href="https://www.instagram.com/p/CGVh9Qnh-jT/" class="instagram-list__link" target="_blank">
+                        <div class="instagram-list__icon-container">
+                            <img src="img/instagram7.png" alt="" class="instagram-list__icon">
+                        </div>
+                    </a>
+                </li>
+                <li class="instagram-list__item">
+                    <a href="https://www.instagram.com/p/CHz8ZVHhiWj/" class="instagram-list__link" target="_blank">
+                        <div class="instagram-list__icon-container">
+                            <img src="img/instagram8.png" alt="" class="instagram-list__icon">
+                        </div>
+                    </a>
+                </li>
+                <li class="instagram-list__item">
+                    <a href="https://www.instagram.com/p/CG7zCOYBo82/" class="instagram-list__link" target="_blank">
+                        <div class="instagram-list__icon-container">
+                            <img src="img/instagram9.png" alt="" class="instagram-list__icon">
+                        </div>
+                    </a>
+                </li>
+                <li class="instagram-list__item">
+                    <a href="https://www.instagram.com/p/CGuz-OThamy/" class="instagram-list__link" target="_blank">
+                        <div class="instagram-list__icon-container">
+                            <img src="img/instagram10.png" alt="" class="instagram-list__icon">
+                        </div>
+                    </a>
+                </li>
+
+            </ul>
+        </section>
+
     </main>
 
 
