--- a/alle-produkter.html
+++ b/alle-produkter.html
@@ -81,7 +81,7 @@
     </header>
 
 
-    <main class="u-margin-bottom">
+    <main class="">
         <div class="about_content">
 
             <section class=" js-category-box category-box-red u-margin-bottom-webshop"></section>
@@ -101,7 +101,7 @@
 
                         </div>
 
-                        <h2 class="category-title show-filtering-buttons">Produktkategorier</h2>
+                        <h2 class="category-title show-filtering-buttons">Kategorier</h2>
 
                         <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-x-category show-filtering-buttons">
                             <line x1="18" y1="6" x2="6" y2="18"></line>
@@ -140,7 +140,7 @@
                                     <div class="category-list__icon-container">
                                         <img src="img/toj-2.svg" alt="" class="category-list__icon">
                                     </div>
-                                    <h3 class="category-list__category-title">Tøj</h3>
+                                    <h3 class="category-list__category-title">Alt tøj</h3>
                                 </a>
                             </li>
                             <li class="category-list__item">
@@ -175,14 +175,102 @@
                 <section class="container-webshop products u-margin-bottom">
                     <div class="container_products">
                         <div class="product-list js-product-list"></div>
+
+
                     </div>
                 </section>
 
             </div>
         </div>
+
+
+
+
+        <section class="instagram-slider u-margin-top">
+            <div class="container-webshop">
+                <h2 class="instagram-slider__title">Følg med på Instagram</h2>
+            </div>
+            <ul class="instagram-list">
+
+                <li class="instagram-list__item">
+                    <a href="https://www.instagram.com/p/CIQwz2uBpu5/" class="instagram-list__link" target="_blank">
+                        <div class="instagram-list__icon-container">
+                            <img src="img/instagram1.png" alt="" class="instagram-list__icon">
+                        </div>
+                    </a>
+                </li>
+                <li class="instagram-list__item">
+                    <a href="https://www.instagram.com/p/CIINxaehhOw/" class="instagram-list__link" target="_blank">
+                        <div class="instagram-list__icon-container">
+                            <img src="img/instagram2.png" alt="" class="instagram-list__icon">
+                        </div>
+                    </a>
+                </li>
+                <li class="instagram-list__item">
+                    <a href="https://www.instagram.com/p/CIXfCoKBptB/" class="instagram-list__link" target="_blank">
+                        <div class="instagram-list__icon-container">
+                            <img src="img/instagram3.png" alt="" class="instagram-list__icon">
+                        </div>
+                    </a>
+                </li>
+                <li class="instagram-list__item">
+                    <a href="https://www.instagram.com/p/CH8UU7HhPgC/" class="instagram-list__link" target="_blank">
+                        <div class="instagram-list__icon-container">
+                            <img src="img/instagram4.png" alt="" class="instagram-list__icon">
+                        </div>
+                    </a>
+                </li>
+                <li class="instagram-list__item">
+                    <a href="https://www.instagram.com/p/CHkoi4dBSSB/" class="instagram-list__link" target="_blank">
+                        <div class="instagram-list__icon-container">
+                            <img src="img/instagram5.png" alt="" class="instagram-list__icon">
+                        </div>
+                    </a>
+                </li>
+                <li class="instagram-list__item">
+                    <a href="https://www.instagram.com/p/CGhtK-1hOwC/" class="instagram-list__link" target="_blank">
+                        <div class="instagram-list__icon-container">
+                            <img src="img/instagram6.png" alt="" class="instagram-list__icon">
+                        </div>
+                    </a>
+                </li>
+                <li class="instagram-list__item">
+                    <a href="https://www.instagram.com/p/CGVh9Qnh-jT/" class="instagram-list__link" target="_blank">
+                        <div class="instagram-list__icon-container">
+                            <img src="img/instagram7.png" alt="" class="instagram-list__icon">
+                        </div>
+                    </a>
+                </li>
+                <li class="instagram-list__item">
+                    <a href="https://www.instagram.com/p/CHz8ZVHhiWj/" class="instagram-list__link" target="_blank">
+                        <div class="instagram-list__icon-container">
+                            <img src="img/instagram8.png" alt="" class="instagram-list__icon">
+                        </div>
+                    </a>
+                </li>
+                <li class="instagram-list__item">
+                    <a href="https://www.instagram.com/p/CG7zCOYBo82/" class="instagram-list__link" target="_blank">
+                        <div class="instagram-list__icon-container">
+                            <img src="img/instagram9.png" alt="" class="instagram-list__icon">
+                        </div>
+                    </a>
+                </li>
+                <li class="instagram-list__item">
+                    <a href="https://www.instagram.com/p/CGuz-OThamy/" class="instagram-list__link" target="_blank">
+                        <div class="instagram-list__icon-container">
+                            <img src="img/instagram10.png" alt="" class="instagram-list__icon">
+                        </div>
+                    </a>
+                </li>
+
+            </ul>
+        </section>
+
+
+
     </main>
     <!--FOOTER-->
-    <footer class="footerstyling u-margin-top">
+    <footer class="footerstyling">
         <!--FOOTER COLUMN WRAPPER-->
 
         <div class="footerinfo container-webshop">
@@ -305,6 +393,10 @@
         async function init() {
             await getCategories();
             initCategoryButtons();
+
+            document.addEventListener("click", function(event) {
+                console.log(event.target);
+            });
         }
 
 
@@ -382,8 +474,13 @@
                     productClone.querySelector(".product__image").alt = product.title.rendered;
                     productClone.querySelector(".product__name").textContent = product.title.rendered;
 
-                    productClone.querySelector(".product__category-link").textContent = productCategoriesList[0].name;
-                    productClone.querySelector(".product__category-link").href = `alle-produkter.html?filter=${productCategoriesList[0].slug}`;
+                    productCategoriesList.forEach(productCategory => {
+                        if (productCategory.slug !== 'colorblock-collection' || productCategory.slug !== 'toj') {
+                            productClone.querySelector(".product__category-link").textContent = productCategory.name;
+                            productClone.querySelector(".product__category-link").href = `alle-produkter.html?filter=${productCategory.slug}`;
+                        }
+                    });
+
                     productClone.querySelector(".product__price").textContent = product.pris;
 
                     productList.appendChild(productClone);
@@ -420,7 +517,7 @@
         function filterProducts(event) {
             console.log(this);
 
-            event.preventDefault();
+            //            event.preventDefault();
 
             filter = this.dataset.category;
             console.log('filter', filter);
@@ -445,8 +542,6 @@
             const categoryBoxClone = categoryBoxTemplate.content.cloneNode(true);
 
             categoryBoxClone.querySelector(".category-box__image").src = findCategory.splash_image.guid;
-
-            console.log(findCategory);
 
             categoryBoxClone.querySelector(".category-box__image").alt = findCategory.splash_image.post_title;
 
@@ -519,10 +614,14 @@
 
 
             document.querySelector(".feather-x-category").addEventListener("click", closeFilterMenu);
+            document.querySelectorAll(".category-list__icon").addEventListener("click", closeFilterMenu);
 
+            console.log('klikket', this);
         }
 
         function closeFilterMenu() {
+            console.log(closeFilterMenu);
+
             document.querySelector(".category-list").classList.toggle("show-filtering-buttons");
 
 
